--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ https://abouhanna.com/humans.txt  <---- and this is hello in my native language
 
   <!-- components -->
   <script src="components/footer.js" type="text/javascript" defer></script>
-
+  <script src="components/spotify.js" type="text/javascript" defer></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-29H3491QVN"></script>
   <script>
@@ -105,7 +105,7 @@ https://abouhanna.com/humans.txt  <---- and this is hello in my native language
   </div>
 
   <footer-component></footer-component>
-
+  <spotify-component></spotify-component>
   <!-- Scripts -->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
