--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ https://abouhanna.com/humans.txt  <---- and this is hello in my native language
   <!-- components -->
   <script src="components/footer.js" type="text/javascript" defer></script>
   <script src="components/spotify.js" type="text/javascript" defer></script>
+  <script src="components/webringComponent.js" type="text/javascript" defer></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-29H3491QVN"></script>
   <script>
@@ -42,6 +43,7 @@ https://abouhanna.com/humans.txt  <---- and this is hello in my native language
       var audio = document.getElementById("audio");
       audio.play();
     }
+
   </script>
 </head>
 
@@ -94,6 +96,7 @@ https://abouhanna.com/humans.txt  <---- and this is hello in my native language
 
   <footer-component></footer-component>
   <spotify-component></spotify-component>
+  <webring-css site="https://gabykaram.com"></webring-css>
   <!-- Scripts -->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
